@@ -40,7 +40,8 @@ importFrom(Matrix,
       "crossprod",
       "tcrossprod",
       "colMeans",
-      "Diagonal"
+      "Diagonal",
+      "solve"
 )
 
 importFrom(stats,
